docs/examples/advanced/multi-versions-website/webhook-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: orkestra
  namespace: orkestra
spec:
  selector:
    app: orkestra   # must match your Deployment labels
  ports:
    - name: https-conversion
      port: 8443
      targetPort: 8443
