docs/examples/advanced/multi-versions-website/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orkestra-ingress
  namespace: orkestra
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: xx.orkestra.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: orkestra
                port:
                  number: 8080
